Update changelog and refactor for sonar